[tool.poetry]
name = "job-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
invoke = "^2.2.0"
sqlalchemy = "^2.0.34"
pydantic = "^2.9.1"
mypysql = "^0.1.7"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
